--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "clarifai": "^2.9.1",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
