--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-easy-crop": "^2.0.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "clarifai": "^2.9.1",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.0",
     "react-icons": "^4.7.1",
     "react-parallax-tilt": "^1.7.101",
     "react-redux": "^8.0.5",
