--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-easy-crop": "^2.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-hash-link": "^2.4.5",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "clarifai": "^2.9.1",
@@ -26,6 +27,7 @@
     "react-parallax-tilt": "^1.7.101",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.2",
     "sass": "^1.58.3",
